objects/End_User_Project__c.object
<CustomObject>
    <description>Only the Project Owner and Account Manager should be able to change the status of the project (Not the opportunity owner)</description>
    <fields>
        <fullName>Account_End_User_Country__c</fullName>
        <description>- Account - End User Country (from account information)</description>
        <formula>Account_End_User__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account - End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>- Account - End User (should be selected from account)</description>
        <inlineHelpText>Account that is owning the project and making finalize use of the investment.</inlineHelpText>
        <label>End User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>&quot;ABB ICV&quot;, &quot;External non-buying Account&quot;</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>End User Projects</relationshipLabel>
        <relationshipName>End_User_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_LSO_Reference_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - 2101 requirement for LSO data in End User Proejct</description>
        <label>Account LSO Reference Data</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Account_End_User__c</field>
                <operation>equals</operation>
                <valueField>ERP_Reference_Data__c.Account__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ERP_Reference_Data__c</referenceTo>
        <relationshipLabel>End User Projects</relationshipLabel>
        <relationshipName>End_User_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Account manager (to be copied from account)</description>
        <formula>Account_End_User__r.Primary_Account_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the account manager as set for the end user account.</inlineHelpText>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>End User Projects (Account)</relationshipLabel>
        <relationshipName>End_User_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Capture Team Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Indicator__c</fullName>
        <description>Modified by BR (4578) and the &quot;release number - 4.9&quot;</description>
        <formula>IF(Capture_Team_Status__c = &quot;No CT Required&quot;, IMAGE(&quot;/resource/CaptureTeamNotRequired&quot;,&quot;&quot;,25,75),  IF(Capture_Team_Status__c = &quot;CT Recommended&quot;, IMAGE(&quot;/resource/CTRecommended&quot;,&quot;&quot;,25,75),  IF(Capture_Team_Status__c = &quot;CT Created&quot;, IMAGE(&quot;/resource/CTCreated&quot;,&quot;&quot;,25,75), &apos;&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displayed when at least one opportunity linked to the end user project has been marked as TARGET and the opportunity value is 5 MUSD (Capture Team Recommended). If indicator shows RECOMENDED: consider to set up a Capture Team.</inlineHelpText>
        <label>Capture Team Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Status__c</fullName>
        <defaultValue>&quot;No CT Required&quot;</defaultValue>
        <label>Capture Team Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPC_Award_Year__c</fullName>
        <description>Start of project</description>
        <inlineHelpText>This is the year that the end user is expected to choose an EPC firm to begin detailed design and beginning to issue purchase orders</inlineHelpText>
        <label>EPC Award Year</label>
        <picklist>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2037</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2038</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2039</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2040</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndUserProjectOwnerLMD__c</fullName>
        <label>EndUserProjectOwnerLMD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndUserProjectPriorOwnerID__c</fullName>
        <label>EndUserProjectPriorOwnerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Migration_ID__c</fullName>
        <description>R3 - Migration Check Field.</description>
        <externalId>true</externalId>
        <label>End User Project Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_User_Project_Site_Country__c</fullName>
        <inlineHelpText>Country that the project is established in.</inlineHelpText>
        <label>Project Site - Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Status__c</fullName>
        <description>End User Project Status</description>
        <inlineHelpText>Gives information about the lifecycle and end user project is in. This value needs to be updated regularly.</inlineHelpText>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Announced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility Study/Conceptual Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEED/Design Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financed/Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Project_Completion_Date__c</fullName>
        <description>R7B</description>
        <inlineHelpText>The date when the project is expected to be completed.</inlineHelpText>
        <label>Expected Project Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_User_Type__c</fullName>
        <description>Created as part of R2.0 to hold partner owner type</description>
        <globalPicklist>External_User_Type</globalPicklist>
        <label>External User Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>CASE( Owner:User.Profile.Name, 
$Label.SYS_ABBExtChannelPartnerCommunityUser, $Label.SYS_Ext_Channel_Partner, 
$Label.SYS_ABB_Ext_Agent_Community_User, $Label.SYS_Ext_Agent , 
$Label.SYS_ABB_Ext_Rep_Community_User, $Label.SYS_Ext_Support,$Label.SYS_Created_by_ABB)</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Year__c</fullName>
        <description>Start of Engineering Design</description>
        <inlineHelpText>This is the year that the end user is expected to evaluate designs for the project</inlineHelpText>
        <label>FEED Year</label>
        <picklist>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2037</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2038</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2039</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2040</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Investment_Decision__c</fullName>
        <description>Decision to execute</description>
        <inlineHelpText>This is the date that the end user is expected to achieve Financial Investment Decision (FID)</inlineHelpText>
        <label>Financial Investment Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Field is visible only through permission set &quot;Business: EndUserProject StrategicProject&quot; for ABB management team</description>
        <globalPicklist>Region_Name</globalPicklist>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Level1_Backup__c</fullName>
        <label>Industry Level1 Backup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Level2_Backup__c</fullName>
        <label>Industry Level2 Backup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Level3_Backup__c</fullName>
        <label>Industry Level3 Backup</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level_1__c</fullName>
        <description>Industries of different characters from mining, raw material production through manufacturing of final products.</description>
        <globalPicklist>Industry_Usage_Level_1</globalPicklist>
        <inlineHelpText>The project segment classification describes to which segment the end user project belongs to. As a best practice, always the lowest level should be selected. The segment classification is needed e.g. in order to support industry segment management.</inlineHelpText>
        <label>Project Industry Segment - Level 1</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level_2__c</fullName>
        <description>Mining, mine site development, and beneficiating (i.e, preparing) metallic minerals and nonmetallic minerals, including coal. The term &quot;mining&quot; is used in the broad sense to include ore extraction, quarrying, and beneficiating (e.g., crushing, screening, washing, sizing, concentrating, and flotation), customarily done at the mine site and pipelines for transportation of the materials.</description>
        <globalPicklist>Industry_Usage_Level_2</globalPicklist>
        <inlineHelpText>The project segment classification describes to which segment the end user project belongs to. As a best practice, always the lowest level should be selected. The segment classification is needed e.g. in order to support industry segment management.</inlineHelpText>
        <label>Project Industry Segment - Level 2</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level_3__c</fullName>
        <description>Onshore exploration and production of oil and gas.</description>
        <globalPicklist>Industry_Usage_Level_3</globalPicklist>
        <inlineHelpText>The project segment classification describes to which segment the end user project belongs to. As a best practice, always the lowest level should be selected. The segment classification is needed e.g. in order to support industry segment management.</inlineHelpText>
        <label>Project Industry Segment - Level 3</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Sales_Collaboration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to initiate an approval process.</description>
        <label>International Sales Collaboration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Project_ID__c</fullName>
        <description>Created as part of R5-2279</description>
        <externalId>true</externalId>
        <label>Legacy Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Org__c</fullName>
        <description>Field is visible only through permission set &quot;Business: EndUserProject StrategicProject&quot; for ABB management team</description>
        <globalPicklist>Management_Org</globalPicklist>
        <label>Management Org</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>R4 - End user project Owner Name</description>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Owner of the end user project.</inlineHelpText>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>Created as part of R5-2273</description>
        <displayFormat>PRO-{YY}-{0}</displayFormat>
        <inlineHelpText>Unique End User Project Identifier.</inlineHelpText>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID__c</fullName>
        <description>R6 - Root Account GUID</description>
        <label>Root Account GUID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID_formula__c</fullName>
        <description>R6 - Root Account GUID</description>
        <formula>Account_End_User__r.Root_Account_GUID__c</formula>
        <label>Root Account GUID formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Name__c</fullName>
        <inlineHelpText>Can be used to reflect end user project name in local language in case the language is different from English.</inlineHelpText>
        <label>Project Secondary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Investment__c</fullName>
        <description>New field as part of R5-2274</description>
        <inlineHelpText>Estimated Project CAPEX including all the opportunities for the ABB Offering as well as other products and services not in the ABB Portfolio.</inlineHelpText>
        <label>Total Investment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_End_User_Projects__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of End User Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfdc_created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a technical field, used to differentiate between records created in salesforce from those created via the API. 
Technical (hidden) field. Activated  from the New End User Project button functionality.</description>
        <inlineHelpText>This is a technical field, used to differentiate between records created in salesforce from those created via the API. 
Technical (hidden) field. Activated  from the &quot;New End User Project&quot; button functionality.</inlineHelpText>
        <label>sfdc_created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <displayFormat>V-{0}</displayFormat>
        <label>test</label>
        <type>AutoNumber</type>
    </fields>
    <label>End User Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_End_User__c</columns>
        <columns>Account_End_User_Country__c</columns>
        <columns>End_User_Project_Site_Country__c</columns>
        <columns>End_User_Project_Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>End User Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>End User Projects</pluralLabel>
    <recordTypes>
        <fullName>Closed_Only</fullName>
        <active>true</active>
        <label>Closed Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_User_Project_Bulk_Accounts</fullName>
        <active>true</active>
        <description>End user cannot be a Bulk Account.</description>
        <errorConditionFormula>AND(CONTAINS(LOWER(Account_End_User__r.Name), &apos;bulk business&apos;),
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
    NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c)
)</errorConditionFormula>
        <errorMessage>End user cannot be a Bulk Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_User_Project_Status</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISPICKVAL( End_User_Project_Status__c ,&quot;Financed/Approved&quot;),
 ISPICKVAL( End_User_Project_Status__c , &quot;Tendering&quot;),
  ISPICKVAL( End_User_Project_Status__c , &quot;Execution&quot;),
 ISPICKVAL( End_User_Project_Status__c , &quot;Completed&quot;),
ISPICKVAL( End_User_Project_Status__c , &quot;Cancelled&quot;))</errorConditionFormula>
        <errorDisplayField>End_User_Project_Status__c</errorDisplayField>
        <errorMessage>Please add the fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inactive_Account_End_User</fullName>
        <active>true</active>
        <description>Inactive Account Users cannot create End User Project.</description>
        <errorConditionFormula>AND(
NOT($User.AccountMerge_Override__c),
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
Account_End_User__r.Active__c == false
)</errorConditionFormula>
        <errorMessage>End User cannot be inactive. Please select an active account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_changes_to_Project_Status</fullName>
        <active>false</active>
        <description>Only the Owner or Account Manager can change the Project Status.</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),
 ISCHANGED(End_User_Project_Status__c),
 AND(
   $User.Id&lt;&gt; OwnerId,
  Account_Manager__c &lt;&gt; $User.Email
 )
)</errorConditionFormula>
        <errorDisplayField>End_User_Project_Status__c</errorDisplayField>
        <errorMessage>Only the record Owner or Account Manager can change this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_complete_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
    NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
OR(
ISPICKVAL( End_User_Project_Status__c ,&quot;Financed/Approved&quot;),
ISPICKVAL( End_User_Project_Status__c ,&quot;Tendering&quot;),
ISPICKVAL( End_User_Project_Status__c ,&quot;Execution&quot;),
ISPICKVAL( End_User_Project_Status__c ,&quot;Completed&quot;)),

ISBLANK(Expected_Project_Completion_Date__c ))</errorConditionFormula>
        <errorMessage>As the status of the End User Project Status was set to “Financed/Approved” or a more advanced status, please provide a future  Expected Project Completion date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STS_EndUserProjectSiteCountryValidation</fullName>
        <active>true</active>
        <description>STS PR2.0 End User Project Site Country Field to be mandatory upon End User Project Status</description>
        <errorConditionFormula>And(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
IF($Setup.Validation_Override__c.Exclude__c=null,TRUE,$Setup.Validation_Override__c.Exclude__c),/*NOT($Setup.Validation_Override__c.Exclude__c),*/ 
OR(ISPICKVAL(End_User_Project_Status__c, &quot;Announced&quot;), 
ISPICKVAL(End_User_Project_Status__c, &quot;Study/FEED/Design&quot;),
ISPICKVAL(End_User_Project_Status__c, &quot;Pending for Approval&quot;),
ISPICKVAL(End_User_Project_Status__c, &quot;Financed/Approved&quot;),
ISPICKVAL(End_User_Project_Status__c, &quot;Tendering&quot;),
ISPICKVAL(End_User_Project_Status__c, &quot;Execution&quot;),
ISPICKVAL(End_User_Project_Status__c, &quot;Completed&quot;), 
ISPICKVAL(End_User_Project_Status__c, &quot;Cancelled&quot;)), 
ISPICKVAL(End_User_Project_Site_Country__c, &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Mandatory field End User Project Site Country</errorMessage>
    </validationRules>
</CustomObject>